--- a/XAI/Base.lproj/Linkage_iPhone.storyboard
+++ b/XAI/Base.lproj/Linkage_iPhone.storyboard
@@ -5,10 +5,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <scenes>
-        <!--Linkage InfoVC-->
+        <!--Linkage EditVC-->
         <scene sceneID="gnV-Oq-oeu">
             <objects>
-                <viewController storyboardIdentifier="XAILinkageInfoVCID" id="a60-cG-E4a" customClass="XAILinkageInfoVC" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="XAILinkageEditVCID" id="a60-cG-E4a" customClass="XAILinkageEditVC" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="eXp-DV-egd">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -96,7 +96,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="XAILinkageInfoCellID" rowHeight="50" id="hze-dG-tJ6" userLabel="light Cell" customClass="XAILinkageInfoCell">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="XAILinkageEditCellID" rowHeight="50" id="hze-dG-tJ6" userLabel="light Cell" customClass="XAILinkageEditCell">
                                         <rect key="frame" x="0.0" y="22" width="320" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hze-dG-tJ6" id="95Y-mW-Akc">
@@ -179,10 +179,10 @@
             </objects>
             <point key="canvasLocation" x="-1606" y="-377"/>
         </scene>
-        <!--Linkage Add InfoVC-->
+        <!--Linkage ChooseVC-->
         <scene sceneID="j5k-Vp-XUG">
             <objects>
-                <viewController storyboardIdentifier="XAILinkageAddInfoVCID" useStoryboardIdentifierAsRestorationIdentifier="YES" id="lmT-qe-t82" customClass="XAILinkageAddInfoVC" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="XAILinkageChooseVCID" useStoryboardIdentifierAsRestorationIdentifier="YES" id="lmT-qe-t82" customClass="XAILinkageChooseVC" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="evx-Vr-Fl7">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -191,12 +191,42 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="656"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
+                            <view contentMode="scaleToFill" id="Jve-ZS-Yo1">
+                                <rect key="frame" x="0.0" y="197" width="320" height="175"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="link_tbg.png" id="Ftb-d5-ohj">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="175"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="link_edit_title.png" id="u8M-VD-2kd">
+                                        <rect key="frame" x="99" y="24" width="122" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="hqB-oH-l7T">
+                                        <rect key="frame" x="283" y="138" width="25" height="29"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
+                                        <state key="normal" image="edit_nor.png">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <state key="highlighted" image="edit_sel.png"/>
+                                        <connections>
+                                            <action selector="globalEditClick:" destination="a60-cG-E4a" eventType="touchUpInside" id="J2G-Jm-QAC"/>
+                                        </connections>
+                                    </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="link_edit_head.png" id="29B-lI-yP1">
+                                        <rect key="frame" x="121" y="86" width="78" height="78"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                             <tableView opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="04l-QC-yAs">
                                 <rect key="frame" x="0.0" y="67" width="320" height="501"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="XAILinkageInfoAddCellID" rowHeight="50" id="r1z-Sm-fPw" userLabel="light Cell" customClass="XAILinkageInfoAddCell">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="XAILinkageChooseCellID" rowHeight="50" id="r1z-Sm-fPw" userLabel="light Cell" customClass="XAILinkageChooseCell">
                                         <rect key="frame" x="0.0" y="22" width="320" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="r1z-Sm-fPw" id="37G-tx-ogB">
@@ -368,7 +398,7 @@
                         <outlet property="gEditBtn" destination="n5j-Be-Ggm" id="vmp-q3-Xm3"/>
                         <outlet property="retView" destination="E8L-Ic-wmz" id="t8f-N8-Z8D"/>
                         <outlet property="tableView" destination="iAp-Ki-5UZ" id="qIS-Pn-UAw"/>
-                        <segue destination="a60-cG-E4a" kind="push" id="0xr-oa-DIi"/>
+                        <segue destination="a60-cG-E4a" kind="push" identifier="nouse1" id="0xr-oa-DIi"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fb3-Do-4a3" userLabel="First Responder" sceneMemberID="firstResponder"/>
