--- a/XAI/Base.lproj/LinkageTime.xib
+++ b/XAI/Base.lproj/LinkageTime.xib
@@ -1,70 +1,58 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" userLabel="LinkageTime" customClass="XAILinkageTime">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+            <rect key="frame" x="0.0" y="0.0" width="330" height="268"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view alpha="0.40000000000000002" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xrQ-Sh-Jof">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                </view>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AqE-Yy-N18" userLabel="event btn">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    <state key="normal">
+                <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="G6Z-2v-6g9">
+                    <rect key="frame" x="0.0" y="18" width="330" height="180"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="180" id="Wo5-b3-JXD"/>
+                    </constraints>
+                    <date key="date" timeIntervalSinceReferenceDate="437019499.57942599">
+                        <!--2014-11-07 02:18:19 +0000-->
+                    </date>
+                </datePicker>
+                <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Srb-kE-PyP" userLabel="left">
+                    <rect key="frame" x="102" y="225" width="127" height="33"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="127" id="aXE-ze-l8Y"/>
+                    </constraints>
+                    <state key="normal" image="linkage_alert_ok_nor.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <state key="highlighted" image="linkage_alert_ok_sel.png"/>
                 </button>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ihp-GM-jQt">
-                    <rect key="frame" x="40" y="85" width="240" height="230"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="linkage_tip.png" translatesAutoresizingMaskIntoConstraints="NO" id="2Ek-fH-ZSI">
-                            <rect key="frame" x="0.0" y="15" width="240" height="220"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        </imageView>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Srb-kE-PyP" userLabel="left">
-                            <rect key="frame" x="57" y="190" width="127" height="35"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" image="linkage_alert_ok_nor.png">
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                            <state key="highlighted" image="linkage_alert_ok_sel.png"/>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zam-l5-Lvg" userLabel="close">
-                            <rect key="frame" x="206" y="17" width="35" height="27"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" image="linkage_tip_close_n.png">
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                        </button>
-                    </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-                </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-            <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+            <constraints>
+                <constraint firstAttribute="centerX" secondItem="Srb-kE-PyP" secondAttribute="centerX" id="PbJ-RL-LxM"/>
+                <constraint firstAttribute="bottom" secondItem="Srb-kE-PyP" secondAttribute="bottom" constant="10" id="TKH-tm-CAj"/>
+                <constraint firstAttribute="trailing" secondItem="G6Z-2v-6g9" secondAttribute="trailing" id="a9B-0U-KiH"/>
+                <constraint firstItem="G6Z-2v-6g9" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="18" id="h2w-zZ-oZQ"/>
+                <constraint firstItem="Srb-kE-PyP" firstAttribute="top" secondItem="G6Z-2v-6g9" secondAttribute="bottom" constant="27" id="oOB-hn-NGC"/>
+                <constraint firstItem="G6Z-2v-6g9" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="oi3-Uy-Mq9"/>
+            </constraints>
+            <nil key="simulatedStatusBarMetrics"/>
+            <nil key="simulatedTopBarMetrics"/>
+            <nil key="simulatedBottomBarMetrics"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="bgBtn" destination="AqE-Yy-N18" id="aCE-zf-jhl"/>
-                <outlet property="closeBtn" destination="Zam-l5-Lvg" id="5dc-hN-Tws"/>
-                <outlet property="rightBtn" destination="Srb-kE-PyP" id="sVe-H3-exd"/>
+                <outlet property="dataPicker" destination="G6Z-2v-6g9" id="BRJ-Cs-J2r"/>
+                <outlet property="okBtn" destination="Srb-kE-PyP" id="lU8-A9-G98"/>
             </connections>
+            <point key="canvasLocation" x="282" y="91"/>
         </view>
     </objects>
     <resources>
         <image name="linkage_alert_ok_nor.png" width="92" height="36"/>
         <image name="linkage_alert_ok_sel.png" width="91" height="36"/>
-        <image name="linkage_tip.png" width="240" height="260"/>
-        <image name="linkage_tip_close_n.png" width="27" height="27"/>
     </resources>
 </document>
